[gd_scene load_steps=14 format=3 uid="uid://djbtxcj38k66x"]

[ext_resource type="Script" uid="uid://cly8tysb05muc" path="res://Mine/Scripts/Experiences/hannah_music_controller.gd" id="1_alwxu"]
[ext_resource type="PackedScene" uid="uid://c0ss0gyp0uuh2" path="res://Mine/Prefabs/Experiences/Hannah/Target1.tscn" id="2_3spxi"]
[ext_resource type="Script" uid="uid://b23h6su8rjuwc" path="res://DialogueSystem/scripts/NPC.gd" id="2_kw12n"]
[ext_resource type="Resource" uid="uid://2egdrfpm58to" path="res://DialogueSystem/output/Hannah-intro.res" id="2_pefbt"]
[ext_resource type="Material" uid="uid://b83vyx4116ayy" path="res://Mine/Models/Hannah/M_BlankTargetPoint.tres" id="3_3spxi"]
[ext_resource type="PackedScene" uid="uid://b51k47rpvw0b8" path="res://Mine/Prefabs/Experiences/Hannah/Target2.tscn" id="3_p22ty"]
[ext_resource type="PackedScene" uid="uid://dyt54rv7sgum4" path="res://Mine/Prefabs/Experiences/Hannah/Target3.tscn" id="4_drsca"]
[ext_resource type="PackedScene" uid="uid://xrc727jt3gd7" path="res://Mine/Prefabs/Experiences/Hannah/Explosion1.tscn" id="5_pefbt"]
[ext_resource type="PackedScene" uid="uid://b7nme2hl2j7sr" path="res://Mine/Prefabs/Experiences/Hannah/Explosion2.tscn" id="6_d4315"]
[ext_resource type="PackedScene" uid="uid://85rml5m6u3e7" path="res://Mine/Prefabs/Experiences/Hannah/Explosion3.tscn" id="7_fq8r8"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="11_fq8r8"]
[ext_resource type="PackedScene" uid="uid://dq5o8m07ndy0v" path="res://Mine/Prefabs/Experiences/Hannah/ScoreCanvas.tscn" id="12_ingqw"]

[sub_resource type="QuadMesh" id="QuadMesh_3r7fc"]

[node name="HannahMusicController" type="Node3D"]
script = ExtResource("1_alwxu")
StartingDialogue = ExtResource("2_pefbt")
TargetLeftPrefab = ExtResource("2_3spxi")
TargetRightPrefab = ExtResource("3_p22ty")
TargetMinePrefab = ExtResource("4_drsca")
TargetShatterLeftPrefab = ExtResource("5_pefbt")
TargetShatterRightPrefab = ExtResource("6_d4315")
TargetShatterMinePrefab = ExtResource("7_fq8r8")

[node name="NPC" type="Node3D" parent="."]
script = ExtResource("2_kw12n")
actor_name = "Music"
send_message_path = NodePath("..")
usesCC = false
metadata/_custom_type_script = "uid://b23h6su8rjuwc"

[node name="TargetOrigin0" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1, 2.5, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin1" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.5, 2.5, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.5, 2.5, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1, 2.5, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin4" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1, 2, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin5" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.5, 2, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin6" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.5, 2, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin7" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1, 2, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin8" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1, 1.5, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin9" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.5, 1.5, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin10" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.5, 1.5, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin11" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1, 1.5, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin12" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1, 1, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin13" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.5, 1, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin14" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.5, 1, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="TargetOrigin15" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1, 1, 0.103)
gi_mode = 0
mesh = SubResource("QuadMesh_3r7fc")
surface_material_override/0 = ExtResource("3_3spxi")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2)
unit_size = 90.0

[node name="Viewport2Din3D" parent="." instance=ExtResource("11_fq8r8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4722, 0.108247)
screen_size = Vector2(3, 1)
collision_layer = 4194304
scene = ExtResource("12_ingqw")
viewport_size = Vector2(500, 200)
unshaded = true
scene_properties_keys = PackedStringArray("hannah_score_canvas.gd")

[connection signal="Song1" from="." to="." method="_on_song_1"]
[connection signal="Song2" from="." to="." method="_on_song_2"]
[connection signal="Song3" from="." to="." method="_on_song_3"]
